rectified error in connection string to database

--- a/CodeFirstDemo/App.config
+++ b/CodeFirstDemo/App.config
@@ -15,6 +15,6 @@
         </providers>
     </entityFramework>
   <connectionStrings>
-    <add name="BlogDbContext" connectionString="data source=LAPTOP-SB0S0AEC\SQLEXPRESS initial catalog=CodeFirstDemo; integrated security=SSPI" providerName="System.Data.SqlClient"/>
+    <add name="BlogDbContext" connectionString="data source=LAPTOP-SB0S0AEC\SQLEXPRESS; initial catalog=CodeFirstDemo; integrated security=SSPI" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
