--- a/CodeFirstDemo/CodeFirstDemo.csproj
+++ b/CodeFirstDemo/CodeFirstDemo.csproj
@@ -53,6 +53,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Migrations\202001181535104_CreatePost.cs" />
+    <Compile Include="Migrations\202001181535104_CreatePost.designer.cs">
+      <DependentUpon>202001181535104_CreatePost.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -60,6 +64,11 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202001181535104_CreatePost.resx">
+      <DependentUpon>202001181535104_CreatePost.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
